fix spacing and make plots not show by default

--- a/src/ui/css/plots.css
+++ b/src/ui/css/plots.css
@@ -15,3 +15,16 @@
     display: block;
     height: 500px;
 }
+
+#plot_enable {
+    display: flex;
+    flex-direction: column;
+}
+
+#plot_enable_table {
+    margin: auto;
+}
+
+#plot_enable_table td {
+    padding: 0.5em;
+}
